<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QZERO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- -Dialog messages -->
    <string name="email_error">Please enter your username.</string>
    <string name="password_empty">Please enter your password.</string>
    <string name="fields_error">Please enter all fields.</string>
    <string name="reg_fname">Please enter first name.</string>
    <string name="reg_lname">Please enter last name.</string>
    <string name="reg_email">Please enter email ID.</string>
    <string name="reg_username">Please enter username.</string>
    <string name="reg_valid_email">Please enter valid email.</string>
    <string name="reg_pwd">Please enter password.</string>
    <string name="reg_cnf_pwd">Please confirm your password.</string>
    <string name="password_pattern_error">Please ensure that you have at least one lower case letter, one upper case letter, one digit and one special character.</string>

    <string name="forget_pwd_email">Please enter valid email ID.</string>
    <string name="internet_connection_message">Please connect to working Internet connection.</string>
    <string name="server_message">Server not responding!</string>
    <string name="password_error">Passwords do not match</string>
    <string name="chkbox_error">Please accept user agreement </string>
    <string name="reg_success">Registration Successful </string>
    <string name="alertbox_ok">OK</string>
    <string name="alertbox_cancel">CANCEL</string>
    <string name="alertbox_allow">ALLOW</string>
    <string name="alertbox_block">BLOCK</string>


    <!-- Home Activty -->
    <string name="txt_search">Search</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_login">Login</string>
    <string name="txt_dlvry_typ">Change Delivery type</string>
    <string name="msg_perm_get_location">QZERO want to know your location.</string>
    <string name="title_perm_get_location">Location Permission</string>
    <string name="wifi_mobile_network_error">No network found, please turn on your wifi or mobile network.</string>


    <!-- -Login user tab -->
    <string name="hint_username">UserName</string>
    <string name="hint_password">Password</string>

    <!-- Login Register tab -->
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_uname">Username</string>
    <string name="hint_pass">Password</string>
    <string name="hint_conf_pass">Confirm Password</string>
    <string name="text_agreement1">I accept the</string>
    <string name="text_agreement2">User Agreement</string>

    <!-- -Search Venue Fragment -->
    <string name="search_venue">Venue Name</string>
    <string name="search_city">City</string>
    <string name="search_zip">Zip Code</string>
    <string name="search_neares_loc">Nearest Location</string>

    <!-- Search Outlet Fragment -->
    <string name="search_Outlet">Outlet</string>
    <string name="submit">Click to search</string>

    <!-- Search Item Fragment -->
    <string name="search_Item">Item</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- Outlet Activity -->

    <string name="title_outlet">Outlets</string>
    <string name="all_outlet">All Outlets</string>
    <string name="change_outlet">Confirm Change Outlet</string>
    <string name="change_text">You are about to change current outlet.\nDo you want to proceed?.</string>
    <string name="change">Change</string>

    <!-- Navigation Drawer -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Open</string>

    <!-- Dashboard -->
    <string name="wallet">Wallet</string>
    <string name="club">Club</string>
    <string name="order">Orders</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="club_member">Club Membership</string>
    <string name="profile_info">Profile Info</string>
    <string name="title_activity_search_item">SearchItemActivity</string>
    <string name="title_activity_outlet_catogery">OutletCatogeryActivity</string>


    <!--OutLet Catogery Activity-->
    <string name="category">Category</string>
    <string name="Tag">0</string>
    <string name="ID">1</string>

    <!-- Profile Info-->
    <string name="response_failure">Server is not responding!</string>
    <string name="null_error">Not available</string>

    <!-- Setting-->
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="save">Submit</string>
    <string name="password_change_success">Password has been changed successfully.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Screen Titles -->
    <string name="dashboard_title">Dashboard</string>
    <string name="home_title">Home</string>
    <string name="order_title">Orders</string>
    <string name="profile_title">Profile</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="setting_title">Change Password</string>
    <string name="log_out">Log out</string>

    <!-- Orders -->
    <string name="search_hint">Order Id</string>
    <!-- Order Items -->
    <string name="billing_address">Billing Address:</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="discount_amount">Discount Amount:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="net_amount">Net Amount:</string>

    <!-- Dummy texts-->
    <string name="address">G-84, Sector-63, NOIDA, U.P. 201301</string>

    <!--Item description Screen-->
    <string name="item_price">Price:</string>
    <string name="item_discount">Discount:</string>
    <string name="add_more">Add More Item</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>

    <!-- Forgot Password-->
    <string name="title_forgot">Forgot Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_text">Forgot your password?</string>
    <string name="email">Email:</string>
    <string name="email_link">Email Link</string>
    <string name="success_message">A link has been sent to your email id</string>
    <string name="title_activity_view_cart">Your Orders</string>

    <!--FinalChkOut-->
    <string name="chkout">CHECKOUT</string>
    <string name="your_order">YOUR ORDER</string>
    <string name="inhouse">In-House</string>
    <string name="shipment">Shipment</string>
    <string name="pickup">Pick Up</string>
    <string name="next">NEXT</string>


    <!-- Add Address -->

    <string name="hint_address">Address</string>
    <string name="hint_zipcode">Zip Code</string>
    <string name="hint_country">Country</string>
    <string name="hint_state">State</string>

    <string name="hint_town">Town/City</string>
    <string name="hint_contact">Phone</string>
    <string name="products">Products</string>
    <string name="price_qty">Price/Qty</string>
    <string name="total">Total</string>

    <!-- CustomAdapterItems tag -->
    <string name="key_pos">0</string>
    <string name="key_id">1</string>

    <!-- Add To Cart -->
    <string name="key_posmod">0</string>
    <string name="key_modid">1</string>

    <!-- View Cart-->
    <string name="empty_cart">There are no items in this cart.</string>


    <string name="msg_shipment">Ship to billing address ?</string>

    <!-- Add Address Activity-->
    <string name="address_saved">Address saved successfully.</string>
    <string name="address_edit">Address edited successfully.</string>
    <string name="holder">Holder</string>
    <string name="object">Object</string>

    <!---GCM Messages -->


    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>

    <string name="registering_message">Generating InstanceID token...</string>

    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <string name="device_type">2</string>

    <!---Delivery type values-->
    <string name="in_venue">1</string>
    <string name="delivery">2</string>
    <string name="pick_up">3</string>


</resources>