<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edtTextOutlet"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/search_Outlet"
        android:paddingTop="10dp"
        android:textColor="@color/color_edittext_background"
        android:textColorHint="@color/color_edittext_background"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/edtTextCity"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/search_city"
        android:paddingTop="10dp"
        android:textColor="@color/color_edittext_background"
        android:textColorHint="@color/color_edittext_background"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/edtTextZip"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/search_zip"
        android:paddingTop="10dp"
        android:textColor="@color/color_edittext_background"
        android:textColorHint="@color/color_edittext_background"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/edtTextLoc"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/search_neares_loc"
        android:paddingTop="10dp"
        android:textColor="@color/color_edittext_background"
        android:textColorHint="@color/color_edittext_background"
        android:textSize="@dimen/textSize" />

    <ImageView
        android:id="@+id/imgViewSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/submit"
        android:src="@drawable/next_button_selector" />

</LinearLayout>