<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context="com.example.qzero.Outlet.Activities.AddAddressActivity">

    <include
        android:id="@+id/header"
        layout="@layout/inclue_header"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtTxtFirstName"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_fname"
                android:inputType="text"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />


            <EditText
                android:id="@+id/edtTxtLastName"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_lname"
                android:inputType="text"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />



            <EditText
                android:id="@+id/edtTxtAddress"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_address"
                android:inputType="text"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />



            <EditText
                android:id="@+id/edtTxtZipCode"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_zipcode"
                android:inputType="number"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />


            <EditText
                android:id="@+id/edtTxtCountry"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_country"
                android:inputType="text"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />



            <EditText
                android:id="@+id/edtTxtState"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_state"
                android:inputType="text"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />


            <EditText
                android:id="@+id/edtTxtTownCity"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_town"
                android:inputType="text"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />



            <EditText
                android:id="@+id/edtTxtEmail"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />





            <EditText
                android:id="@+id/edtTxtContact"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_editext"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_contact"
                android:inputType="text"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/color_edittext_background"
                android:textColorHint="@color/color_edittext_background"
                android:textSize="@dimen/textSize" />



            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/card_address"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/selector"
                android:text="Submit" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
