<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edtTextUserName"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textColor="@color/color_edittext_background"
        android:textColorHint="@color/color_edittext_background"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textColor="@color/color_edittext_background"
        android:textColorHint="@color/color_edittext_background"
        android:textSize="@dimen/textSize" />

    <ImageView
        android:id="@+id/imgViewSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:src="@drawable/next_button_selector" />

    <TextView
        android:id="@+id/txtViewForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/primary_color"
        android:textSize="15dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>