<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF">

    <ListView
        android:id="@+id/orderListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_addresses"></ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/rl_addresses"
        android:background="@color/color_red"></View>

    <RelativeLayout
        android:id="@+id/rl_addresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_banner"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/ll_billing_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_billing_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billing_address"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_billing_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_billing_address"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_shipping_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping_address"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_shipping_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_banner"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="#ffde665d" />
</RelativeLayout>